# iu7-cg

./: .gitignore  README.md
lab_01/: CMakeLists.txt  Circle.cpp  Circle.hpp  Dot.cpp  Dot.hpp  MainWindow.cpp  MainWindow.hpp  Surface.cpp  Surface.hpp  mainwindow.ui  ui_mainwindow.h
lab_02/: 2DPrimitives.cpp  2DPrimitives.hpp  Arc.cpp  Arc.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Figure.cpp  Figure.hpp  Image.cpp  Image.hpp  MainWindow.cpp  MainWindow.hpp  Segment.cpp  Segment.hpp  car.cpp  car.hpp  input.txt  mainwindow.ui  ui_mainwindow.h
lab_03/: CMakeLists.txt  Dot.cpp  Dot.hpp  Line.cpp  Line.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  mainwindow.ui  ui_mainwindow.h
lab_05/: CMakeLists.txt
lab_05/field/: dot.cpp  errors.h  field.cpp  field.h  figure.cpp  figure.h  mypixelmap.cpp  mypixelmap.h  pixel.cpp  pixel.h
lab_05/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab_06/field/: delayout.h  dot.h  field.cpp  field.h  mypixelmap.cpp  mypixelmap.h  pixel.cpp  pixel.h
lab_06/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab_07/: CMakeLists.txt
lab_07/field/: line.cpp  line.h  square.cpp  square.h
lab_07/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab_08/: CMakeLists.txt
lab_08/field/: cutter.cpp  cutter.h  line.cpp  line.h
lab_08/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab_09/: CMakeLists.txt  figure.cpp  figure.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab_10/: CMakeLists.txt
lab_10/field/: field.cpp  field.h  functions.cpp  functions.h
lab_10/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
